# pptmod

./: .gitignore  README.md  build-gui.ps1  build.ps1  build.py  gui.py  main.py  pptmod-gui.spec  pptmod.spec  pptmodconfig.json  pyproject.toml
